--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -1,5 +1,5 @@
 
-<div class='row'>
+<div class='row' class="data-list">
 	<div class='col-xs-12 col-sm-3'>
 		<div class='col-xs-12'>
 			<h4 class='theme-color'>FILTERS</h4>
