--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -12,13 +12,17 @@
 	
 	<div class='col-xs-12 col-sm-9 bg-grey'>
 			<div class='col-xs-12'>
+				<!--
 				<div class='col-xs-12'>
-					<div class='col-xs-12'>
+									<div class='col-xs-12'>-->
+				
 						<h2 class="h3"> Showing <div class="results-number">{{vm.setFromRecord}}-{{vm.setToRecord}} of {{vm.totalRecords}} records</div></h2>
 						<div class="gap20"></div>
+					<!--
 					</div>
-	
-				</div>
+						
+									</div>-->
+					
 			</div>
 	
 		<div dir-paginate="result in vm.resultList | itemsPerPage : pageSize" current-page="currentPage" pagination-id="dataPagination" total-items="vm.totalRecords" class='col-md-6'>
