--- a/app/styles/home/home.css
+++ b/app/styles/home/home.css
@@ -13,7 +13,7 @@
 	height: 400px;
 	background-repeat: no-repeat !important;
 	background-size: cover !important;
-	background-position: center center !important;
+	background-position: right top !important;
 	background-attachment: fixed !important;
 	color: #fff;
 	height: 500px;
