--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -1,8 +1,8 @@
 
 <footer class="col-xs-12" id ="footer">
    <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
-      <a href='/'>
-      <span class="logo"><img class="img img-rounded" src="../images/logo.jpeg"/></span>
+      <a href='/' class="footer-logo-anchor">
+      <span class="logo"><img class="img" src="images/12.png"/></span>
       </a>
       <div class="h3">Welcome to Le Partycious</div>
       <p class="info">We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.</p>
@@ -10,22 +10,22 @@
       <ul class="social">
          <li>
             <a target="_blank" href="https://www.facebook.com/LePartycious">
-            <span><img class="img img-rounded" src="../images/facebook.png"/></span>
+            <span class="fa fa-facebook"></span>
             </a>
          </li>
          <li>
             <a target="_blank" href="https://twitter.com/lepartycious">
-            <span><img class="img img-rounded" src="../images/twitter.jpeg"/></span>
+            <span class="fa fa-twitter"></span>
             </a>
          </li>
          <li>
             <a target="_blank" href="https://www.youtube.com/channel/UC-VL9PRSgYJF9L_XDUrYpzA">
-            <span><img class="img img-rounded" src="../images/youtube.png"/></span>
+            <span class="fa fa-youtube"></span>
             </a>
          </li>
          <li>
             <a target="_blank" href="https://instagram.com/lepartycious">
-            <span><img class="img img-rounded" src="../images/instagram.jpeg"/></span>
+            <span class="fa fa-instagram"></span>
             </a>
          </li>
       </ul>
