--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -8,14 +8,9 @@
 			<span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="/">
-				<img src="" height="50px;" alt="logo-image"></a>
-				</div><!-- Collect the nav links, forms, and other content for toggling -->
+				<img src="images/23.png" height="50px;" alt="logo-image"></a>
+				
 				<div class="lp-select-city">
-					<!--
-					<select class="lp-select-city-menu">
-											<option value="Bikaner">Bikaner</option>
-											<option value="Chandigarh">Chandigarh</option>
-										</select>-->
 					<div class="lp-select-city-text" ng-click="vm.toggleDropdown()">
 						<span class="lp-selected-city">Bikaner</span>
 						<span class="fa fa-fw fa-map-marker float-right"></span>
@@ -25,6 +20,9 @@
 						<li><a href='javascript:void(0)' data-ng-click='vm.setCity($event)'>Chandigarh</a></li>
 					</ul>
 				</div>
+				
+				</div><!-- Collect the nav links, forms, and other content for toggling -->
+				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<!--
 					<ul class="nav navbar-nav">
