--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -184,6 +184,12 @@ a:hover, a:focus {
 #footer a {
 	color: #fff;
 	text-decoration: none;
+	    display: block;
+   /* height: 100px;*/
+}
+
+#footer a.footer-logo-anchor{
+	height: 100px;
 }
 
 .logo {
@@ -208,6 +214,39 @@ p.info, p.connect {
 #footer .social li {
 	padding-right: 20px;
 	display: inline-block;
+}
+
+#footer .social li span{
+	color: #ffffff;
+    line-height: 2.3;
+    font-size: 22px;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    border: 1px solid #fff;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -o-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.social a:hover span.fa-facebook {
+    background: #3b5998;
+}
+
+.social a:hover span.fa-twitter {
+    background: #55acee;
+}
+
+.social a:hover span.fa-youtube {
+    background: rgb(255, 0, 51);
+}
+
+.social a:hover span.fa-instagram {
+    background: rgb(136, 142, 153);
 }
 
 /* Footer css ends*/
@@ -248,23 +287,6 @@ p.info, p.connect {
     height: 80px;
 }
 
-@media only screen and (max-width: 767px) and (min-width: 0)
-{.navbar-brand {
-    float: left;
-    padding: 10px;
-    font-size: 12px;
-    line-height: 1;
-    height: 50px;
-}
-
-}
-
-@media only screen and (min-width: 767px)
-{
-#navbar{
-	max-height: 80px;
-}
-}
 
 
 .navbar-inverse .navbar-nav>.active>a, 
@@ -332,7 +354,8 @@ p.info, p.connect {
 	display: inline-block;
 	float: left;
 	margin-right: 0px;
-    margin-left: 60%;
+    /*margin-left: 50%;*/
+       padding: 0px 15px;
 }
 
 .lp-select-city-text{
@@ -439,72 +462,7 @@ p.info, p.connect {
 .nav ul {
 	list-style: none;
 }
-@media screen and (max-width: 800px) {
-	.active {
-		display: block;
-	}
-	.menu li a {
-		text-align: left;
-		border-radius: 0;
-		-webkit-border-radius: 0;
-		-moz-border-radius: 0;
-		-o-border-radius: 0;
-	}
-	.nav {
-		list-style: none;
-		width: 95%;
-		/*position: absolute;*/
-		right: 20px;
-		background: rgba(73, 84, 91, 0.87);
-		top: 66px;
-		z-index: 111;
-	}
-	.nav:after {
-		content: '';
-		position: absolute;
-		right: 18px;
-		top: -9px;
-		border-left: 10px solid rgba(0, 0, 0, 0);
-		border-right: 10px solid rgba(0, 0, 0, 0);
-		border-bottom: 10px solid rgba(73, 84, 91, 0.87);
-	}
-	.menu li a span.messages {
-		text-align: center;
-		top: 15px;
-	}
-	.nav li ul {
-		width: 100%;
-	}
-	.menu ul {
-		margin: 0;
-	}
-	.nav > li.hover > ul {
-		width: 100%;
-	}
-	.nav > li {
-		float: none;
-		display: block;
-	}
-	.nav ul {
-		display: block;
-		width: 100%;
-	}
-	.nav > li.hover > ul, .nav li li.hover ul {
-		position: static;
-	}
-	.nav li a {
-		border-top: 1px solid rgba(73, 84, 91, 0.87);
-	}
-	.nav li:first-child a {
-		border-top: none;
-	}
-	
-	.lp-select-city-menu{
-    height: 30px;
-    margin: 10px 0px 10px 0px;
 
-}
-}
 .header-bottom {
 	padding: 15% 0;
 	text-align: center;
@@ -589,3 +547,93 @@ p.info, p.connect {
 }
 
 /*loading screen styling ends*/
+
+
+@media only screen and (max-width: 767px) and (min-width: 0)
+{.navbar-brand {
+    float: left;
+    padding: 10px;
+    font-size: 12px;
+    line-height: 1;
+    height: 50px;
+}
+
+.lp-select-city{
+	float: right;
+}
+
+}
+
+@media only screen and (min-width: 767px)
+{
+#navbar{
+	max-height: 80px;
+}
+}
+
+@media screen and (max-width: 800px) {
+	.active {
+		display: block;
+	}
+	.menu li a {
+		text-align: left;
+		border-radius: 0;
+		-webkit-border-radius: 0;
+		-moz-border-radius: 0;
+		-o-border-radius: 0;
+	}
+	.nav {
+		list-style: none;
+		width: 95%;
+		/*position: absolute;*/
+		right: 20px;
+		background: rgba(73, 84, 91, 0.87);
+		top: 66px;
+		z-index: 111;
+	}
+	.nav:after {
+		content: '';
+		position: absolute;
+		right: 18px;
+		top: -9px;
+		border-left: 10px solid rgba(0, 0, 0, 0);
+		border-right: 10px solid rgba(0, 0, 0, 0);
+		border-bottom: 10px solid rgba(73, 84, 91, 0.87);
+	}
+	.menu li a span.messages {
+		text-align: center;
+		top: 15px;
+	}
+	.nav li ul {
+		width: 100%;
+	}
+	.menu ul {
+		margin: 0;
+	}
+	.nav > li.hover > ul {
+		width: 100%;
+	}
+	.nav > li {
+		float: none;
+		display: block;
+	}
+	.nav ul {
+		display: block;
+		width: 100%;
+	}
+	.nav > li.hover > ul, .nav li li.hover ul {
+		position: static;
+	}
+	.nav li a {
+		border-top: 1px solid rgba(73, 84, 91, 0.87);
+	}
+	.nav li:first-child a {
+		border-top: none;
+	}
+	
+	.lp-select-city-menu{
+    height: 30px;
+    margin: 10px 0px 10px 0px;
+
+}
+}
