--- a/app/styles/data.css
+++ b/app/styles/data.css
@@ -1,4 +1,4 @@
-.data-list{
+.data-list {
 	min-height: 500px;
 }
 .results-number {
@@ -29,27 +29,52 @@
 	border-bottom: 0 solid transparent;
 	border-top-right-radius: 3px;
 	border-top-left-radius: 3px;
+	/* for image zoom overflow is set to hidden */
+	overflow: hidden;
 }
 
 .pamphlet-container .pamphlet-header img {
-    height: 100%;
-    width: 100%;
-    margin: auto;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+	height: 100%;
+	width: 100%;
+	margin: auto;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	transform: scale(1,1);
+	transition: transform 0.5s 0s;
+	-webkit-transform: scale(1,1);
+	-webkit-transition: -webkit-transform 0.5s 0s;
+	-moz-transform: scale(1,1);
+	-moz-transition: -moz-transform 0.5s 0s;
+	-o-transform: scale(1,1);
+	-o-transition: -o-transform 0.5s 0s;
+	-ms-transform: scale(1,1);
+	-ms-transition: -ms-transform 0.5s 0s;
 }
 
-.pamphlet-container .pamphlet-body{
+.pamphlet-container .pamphlet-header:hover img {
+	transform: scale(1.2,1.2);
+	transition: transform 0.5s 0s;
+	-webkit-transform: scale(1.2,1.2);
+	-webkit-transition: -webkit-transform 0.5s 0s;
+	-moz-transform: scale(1.2,1.2);
+	-moz-transition: -moz-transform 0.5s 0s;
+	-o-transform: scale(1.2,1.2);
+	-o-transition: -o-transform 0.5s 0s;
+	-ms-transform: scale(1.2,1.2);
+	-ms-transition: -ms-transform 0.5s 0s;
+}
+
+.pamphlet-container .pamphlet-body {
 	height: 60px;
 	padding: 0px;
 }
 
-.pamphlet-body .pamphlet-title{
-	    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    font-size: 16px;
-    line-height: 60px;
-    height: inherit;
+.pamphlet-body .pamphlet-title {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	font-size: 16px;
+	line-height: 60px;
+	height: inherit;
 }
 
