--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -16,7 +16,7 @@
 				<div class='col-xs-12'>
 									<div class='col-xs-12'>-->
 				
-						<h2 ng-if="vm.resultList.lenght > 0" class="h3"> Showing <div class="results-number">{{vm.setFromRecord}}-{{vm.setToRecord}} of {{vm.totalRecords}} records</div></h2>
+						<h2 ng-if="vm.resultList.length > 0" class="h3"> Showing <div class="results-number">{{vm.setFromRecord}}-{{vm.setToRecord}} of {{vm.totalRecords}} records</div></h2>
 						<h2 ng-if="vm.resultList.length == 0">No Records Found!</h2>
 						<div class="gap20"></div>
 					<!--
