--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -26,7 +26,7 @@
 					
 			</div>
 	
-		<div dir-paginate="result in vm.resultList | itemsPerPage : pageSize" current-page="currentPage" pagination-id="dataPagination" total-items="vm.totalRecords" class='col-md-6'>
+		<div dir-paginate="result in vm.resultList | itemsPerPage : pageSize" current-page="currentPage" pagination-id="dataPagination" total-items="vm.totalRecords" class='col-md-6 data-page-record'>
 					
 					
 					
