committing the recently added section

--- a/app/styles/home/home.css
+++ b/app/styles/home/home.css
@@ -143,6 +143,27 @@
 	margin-bottom: 2em;
 }
 
+/* Recently Added section css */
+.recently-added-list{
+	column-count: 3;
+	-webkit-column-count: 3;
+	-moz-column-count: 3;
+	-o-column-count: 3;
+	-ms-column-count: 3;
+}
+
+.recently-added-list li{
+	padding: 10px;
+}
+
+.recently-added-list li a{
+	color: #656565;
+}
+
+.recently-added-list li a:hover{
+	text-decoration: underline;
+}
+
 @media only screen and (min-width: 0px) and (max-width: 767px) {
 	#coverPage .home-search-btn {
 		border-radius: 6px;
@@ -151,10 +172,28 @@
 	#coverPage .home-search-box {
 		border-radius: 0px;
 	}
+	
+	.recently-added-list{
+	column-count: 1;
+	-webkit-column-count: 1;
+	-moz-column-count: 1;
+	-o-column-count: 1;
+	-ms-column-count: 1;
+}
 
 /*
 	#coverPage {
 		height: 300px;
 	}*/
 
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+	.recently-added-list{
+	column-count: 2;
+	-webkit-column-count: 2;
+	-moz-column-count: 2;
+	-o-column-count: 2;
+	-ms-column-count: 2;
+}
 }
