--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -1,3 +1,14 @@
+<!-- Recently Added section starts -->
+<section class="text-center bg-grey row">
+	<h2 class="theme-color">RECENTLY ADDED</h2>
+	<ul class="recently-added-list">
+		<li><a href='javascript:void(0)'>J W Marriot, Chandigarh</a></li>
+		<li><a href='javascript:void(0)'>J W Marriot, Chandigarh</a></li>
+		<li><a href='javascript:void(0)'>J W Marriot, Chandigarh</a></li>
+		<li><a href='javascript:void(0)'>J W Marriot, Chandigarh</a></li>
+		<li><a href='javascript:void(0)'>J W Marriot, Chandigarh</a></li>
+	</ul>
+</section>
 <!-- LePartycious section starts -->
 <section class="container text-center">
 	<h2 class="theme-color">WELCOME TO LE PARTYCIOUS</h2>
