committing about us page

--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -35,7 +35,7 @@
       <div class="row">
          <div class="col-xs-12">
             <ul>
-               <a href="#">
+               <a href="/aboutus" ng-click="vm.hideCover();">
                   <li>About Us</li>
                </a>
                <a href="#" ng-click="vm.openContactForm();">
