--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,31 +1,31 @@
 /* Addition of relevant Fonts */
 @font-face {
 	font-family: 'OpenSans-Bold';
-	src: url('../fonts/OpenSans-Bold.ttf') format('truetype');
+	src: url('/styles/fonts/OpenSans-Bold.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'OpenSans-Italic';
-	src: url('../fonts/OpenSans-Italic.ttf') format('truetype');
+	src: url('/styles/fonts/OpenSans-Italic.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'OpenSans-Light';
-	src: url('../fonts/OpenSans-Light.ttf') format('truetype');
+	src: url('/styles/fonts/OpenSans-Light.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'OpenSans-Regular';
-	src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
+	src: url('/styles/fonts/OpenSans-Regular.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'OpenSans-Semibold';
-	src: url('../fonts/OpenSans-Semibold.ttf') format('truetype');
+	src: url('/styles/fonts/OpenSans-Semibold.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
