--- a/app/views/about/about.html
+++ b/app/views/about/about.html
@@ -1,6 +1,7 @@
 <div class="about-us-page">
 	<div id="coverPage" class="generic-cover text-center">
-	BRINGING SMILES ON FACES
+		
+		<div class="cover-text vertical-center main-heading">BRINGING SMILES ON FACES</div>
 	</div>
 <!-- About LE PARTYCIOUS section starts -->
 <section class="container text-center">
