--- a/app/views/cover/cover.html
+++ b/app/views/cover/cover.html
@@ -1,4 +1,4 @@
-<div id="coverPage" class="">
+<div id="coverPage" class="" style="background-image: url({{vm.coverUrl}})">
 	<div class="content-wrapper">
 		<div class="container">
 			<div class="main-content text-center vertical-center">
