--- a/app/views/data/filters.html
+++ b/app/views/data/filters.html
@@ -1,4 +1,8 @@
 <div>	
+		<div class="ribbon-search-button form-group text-center">
+		<button class="btn btn-lg btn-default filter-btn" ng-click="vm.filterResults();">Filter</button>
+		<button class="btn btn-lg btn-default reset-btn"  ng-click="vm.resetFilters();">Reset</button>			
+	</div>
 	<hr>
 	<div ng-if="vm.filters.localities.length > 0">
 		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showLocalityFilters = !vm.showLocalityFilters;" data-toggle="collapse" data-target="#localityDiv"><i ng-class="!vm.showLocalityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Localities</b><!-- <i class="fa fa-globe"></i> --></div>
@@ -66,8 +70,5 @@
 
 	<hr>
 
-	<div class="ribbon-search-button form-group text-center">
-		<button class="btn btn-lg btn-default ribbon-search-btn" style="background-color:#f37254;" ng-click="vm.filterResults();">Filter</button>
-		<button class="btn btn-lg btn-default ribbon-search-btn" style="background-color:#fdebe7;" ng-click="vm.resetFilters();">Reset</button>			
-	</div>
+
 </div>
