--- a/app/views/about/about.html
+++ b/app/views/about/about.html
@@ -1,5 +1,5 @@
 <div class="about-us-page">
-	<div id="coverPage" class="generic-cover text-center">
+	<div id="coverPage" class="generic-cover text-center about-us-cover">
 		
 		<div class="cover-text vertical-center main-heading">BRINGING SMILES ON FACES</div>
 	</div>
