--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -2,7 +2,7 @@
 <footer class="col-xs-12" id ="footer">
    <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
       <a href='/' class="footer-logo-anchor">
-      <span class="logo"><img class="img" src="images/12.png"/></span>
+      <span class="logo"><img class="img" src="/images/lp_main_logo.png"/></span>
       </a>
       <div class="h3">Welcome to Le Partycious</div>
       <p class="info">We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.</p>
