--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -281,7 +281,7 @@ p.info, p.connect {
 
 .navbar-brand {
     float: left;
-    padding: 15px;
+    padding: 10px 15px;
     font-size: 18px;
     line-height: 50px;
     height: 80px;
