--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -8,12 +8,12 @@
 			<span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="/">
-				<img src="images/23.png" height="50px;" alt="logo-image"></a>
+				<img src="/images/lp_logo.png" height="60px;" alt="logo-image"></a>
 				
 				<div class="lp-select-city">
 					<div class="lp-select-city-text" ng-click="vm.toggleDropdown()">
 						<span class="lp-selected-city">Bikaner</span>
-						<span class="fa fa-fw fa-map-marker float-right"></span>
+						<span class="fa fa-fw fa-map-marker float-right location-icon"></span>
 						</div>
 					<ul class="lp-city-dropdown">
 						<li><a href='javascript:void(0)' data-ng-click='vm.setCity($event)'>Bikaner</a></li>
