--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -41,7 +41,7 @@
                <a href="#" ng-click="vm.openContactForm();">
                   <li>Contact Us</li>
                </a>
-               <a href="#">
+               <a href="/faq">
                   <li>FAQs</li>
                </a>
                <a href="#">
