--- a/app/styles/gallery.css
+++ b/app/styles/gallery.css
@@ -7,6 +7,7 @@
 	z-index: 1050;
 	/*display: none;*/
 	visibility: hidden;
+	background: rgba(255,255,255,1);
 }
 
 .gallery-container.show{
@@ -19,7 +20,7 @@
 	left: 0px;
 	top: 0px;
 	height: 100%;
-	width: 100%;
+	width: 75%;
 	background: rgba(0,0,0,0.8);
 }
 
