committing changes in gallery

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -43,6 +43,7 @@ html, body {
 	-moz-user-select: none;
 	-o-user-select: none;
 	-ms-user-select: none;
+	-webkit-touch-callout: none !important; 
 }
 
 section {
