--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -91,21 +91,21 @@
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
         <!-- Slides -->
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/1)"></div>
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/2)"></div>
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/3)"></div>
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/4)"></div>
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/5)"></div>
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/6)"></div>
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/7)"></div>
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/8)"></div>
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/9)"></div>
-            <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/10)"></div>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/1)"></a>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/2)"></a>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/3)"></a>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/4)"></a>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/5)"></a>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/6)"></a>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/7)"></a>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/8)"></a>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/9)"></a>
+            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/10)"></a>
     </div>
     
     <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+    <a href="javascript:void(0)" class="swiper-button-prev"></a>
+    <a href="javascript:void(0)" class="swiper-button-next"></a>
     
 
 </div>
