--- a/app/styles/gallery.css
+++ b/app/styles/gallery.css
@@ -7,7 +7,7 @@
 	z-index: 1050;
 	/*display: none;*/
 	visibility: hidden;
-	background: rgba(255,255,255,1);
+	background: rgba(0,0,0,0.8);
 }
 
 .gallery-container.show{
@@ -20,22 +20,49 @@
 	left: 0px;
 	top: 0px;
 	height: 100%;
-	width: 75%;
+	/*width: 75%;*/
 	background: rgba(0,0,0,0.8);
+	border-radius: 6px;
+    padding: 2%;
 }
 
 .gallery-container .gallery-close-btn{
-	right: 0px;
-	top: 0px;
-	height: 50px;
-	width: 50px;
-	position: absolute;
-	cursor: pointer;
-	z-index: 1;
-	background-image: url('../images/icon_close.png');
-	background-repeat: no-repeat;
-	background-position: center;
+right: 6px;
+    top: 6px;
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    cursor: pointer;
+    z-index: 1;
+    background-image: url('/images/icon_close.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    -ms-transform: scale(1);
+    transition: transform 0.2s 0s;
+    -webkit-transition: -webkit-transform 0.2s 0s;
+    -moz-transition: -moz-transform 0.2s 0s;
+    -o-transition: -o-transform 0.2s 0s;
+    -ms-transition: -ms-transform 0.2s 0s;
 }
+
+.gallery-container .gallery-close-btn:hover{
+	transform: scale(1.4);
+    -webkit-transform: scale(1.4);
+    -moz-transform: scale(1.4);
+    -o-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    transition: transform 0.2s 0s;
+    -webkit-transition: -webkit-transform 0.2s 0s;
+    -moz-transition: -moz-transform 0.2s 0s;
+    -o-transition: -o-transform 0.2s 0s;
+    -ms-transition: -ms-transform 0.2s 0s;
+}
+
 .gallery-container .swiper-container {
 	width: 100%;
 	height: 300px;
@@ -45,6 +72,7 @@
 .gallery-container .swiper-slide {
 	background-size: cover;
 	background-position: center;
+	border-radius: 6px;
 }
 .gallery-container .gallery-top {
 	height: 80%;
@@ -63,4 +91,41 @@
 .gallery-container .gallery-thumbs .swiper-slide-active {
 	opacity: 1;
 	    border: 2px solid #ffffff;
+}
+.gallery-container .gallery-side-panel{
+	padding: 2%;	
+	height: 100%;
+}
+.gallery-container .gallery-side-panel > div{
+	border-radius: 6px;
+	background: rgba(255,255,255,1);
+	height: 100%;
+	padding: 5%;
+}
+
+.gallery-helptext-container li.active{
+	color: #F37254;
+	font-family: 'OpenSans-Semibold';
+	font-size: 16px;
+}
+
+.gallery-helptext-container li + li{
+	margin-top: 5px;
+}
+
+.gallery-helptext-container li a{
+	color: #656565;
+}
+
+.gallery-helptext-container li a:hover,
+.gallery-helptext-container li a:focus{
+	color: #656565;
+}
+
+.gallery-helptext-container li.active a{
+	color: #F37254;
+}
+
+.gallery-venuename{
+	font-size: 16px;
 }
