--- a/app/views/data/filters.html
+++ b/app/views/data/filters.html
@@ -5,6 +5,7 @@
 	</div>
 	<hr>
 	<div ng-if="vm.filters.localities.length > 0">
+		<hr>
 		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showLocalityFilters = !vm.showLocalityFilters;" data-toggle="collapse" data-target="#localityDiv"><i ng-class="!vm.showLocalityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Localities</b><!-- <i class="fa fa-globe"></i> --></div>
 			<div id="localityDiv" class="collapse in">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.localities">
@@ -15,9 +16,23 @@
 				</div>
 			</div>
 	</div>
+
+	<div ng-if="vm.filters.eventType.length > 0">
+		<hr>
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showEventsFilters = !vm.showEventsFilters;" data-toggle="collapse" data-target="#eventDiv"><i ng-class="!vm.showEventsFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Event Type</b></div>
+			<div id="eventDiv" class="collapse in">
+				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.eventType">
+				    <input ng-model='filter.checked' type='checkbox'>
+				    <label for="estCheckBoxes">
+		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
+		        	</label>
+				</div>
+			</div>
+	</div>
 	
-	<hr>
+	
 	<div ng-if="vm.filters.establishments.length > 0">
+		<hr>
 		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showEstablishmentFilters = !vm.showEstablishmentFilters;" data-toggle="collapse" data-target="#establishmentDiv"><i ng-class="!vm.showEstablishmentFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Establishment Type</b></div>
 			<div id="establishmentDiv" class="collapse in">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.establishments">
@@ -28,10 +43,51 @@
 				</div>
 			</div>
 	</div>
+
+	<div ng-if="vm.filters.rentalType.length > 0">
+		<hr>
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showRentalFilters = !vm.showRentalFilters;" data-toggle="collapse" data-target="#rentalDiv"><i ng-class="!vm.showRentalFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Rental Type</b></div>
+			<div id="rentalDiv" class="collapse in">
+				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.rentalType">
+				    <input ng-model='filter.checked' type='checkbox'>
+				    <label for="rentalCheckBoxes">
+		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
+		        	</label>
+				</div>
+			</div>
+	</div>
+
 	<hr>
-	<h4 class='theme-color'>MORE FILTERS</h4>
-	<hr>
+	<h4 ng-if="vm.filters.carType.length > 0 || vm.filters.bandType.length > 0 || vm.filters.amenities.length > 0|| vm.filters.rooms.length > 0 || vm.filters.services.length > 0 || vm.filters.priceRange.length > 0" class='theme-color'>MORE FILTERS</h4>
+
+	<div ng-if="vm.filters.carType.length > 0">
+		<hr>
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showCarFilters = !vm.showCarFilters;" data-toggle="collapse" data-target="#carDiv"><i ng-class="!vm.showCarFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Car Type</b></div>
+			<div id="carDiv" class="collapse">
+				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.carType">
+				    <input ng-model='filter.checked' type='checkbox'>
+				    <label for="carCheckBoxes">
+		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
+		        	</label>
+				</div>
+			</div>
+	</div>
+
+	<div ng-if="vm.filters.bandType.length > 0">
+		<hr>
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showBandFilters = !vm.showBandFilters;" data-toggle="collapse" data-target="#bandDiv"><i ng-class="!vm.showBandFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Band Type</b></div>
+			<div id="bandDiv" class="collapse">
+				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.bandType">
+				    <input ng-model='filter.checked' type='checkbox'>
+				    <label for="bandCheckBoxes">
+		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
+		        	</label>
+				</div>
+			</div>
+	</div>
+	
 	<div ng-if="vm.filters.amenities.length > 0">
+		<hr>
 		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showAmenityFilters = !vm.showAmenityFilters;" data-toggle="collapse" data-target="#amenityDiv"><i ng-class="!vm.showAmenityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Amenities</b><!-- <i class="space fa fa-building"></i> --></div>
 			<div id="amenityDiv" class="collapse">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.amenities">
@@ -42,8 +98,9 @@
 				</div>
 			</div>
 	</div>
-	<hr>
+	
 	<div ng-if="vm.filters.rooms.length > 0">
+		<hr>
 		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showRoomFilters = !vm.showRoomFilters;" data-toggle="collapse" data-target="#roomDiv"><i ng-class="!vm.showRoomFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Room Type</b></div>
 			<div id="roomDiv" class="collapse">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.rooms">
@@ -54,9 +111,10 @@
 				</div>
 			</div>
 	</div>
-	<hr>
+	
 	
 	<div ng-if="vm.filters.services.length > 0">
+		<hr>
 		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showServiceFilters = !vm.showServiceFilters;" data-toggle="collapse" data-target="#serviceDiv"><i ng-class="!vm.showServiceFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Services</b></div>
 		<div id="serviceDiv" class="collapse">
 			<div  ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.services">
@@ -66,6 +124,21 @@
 	        	</label>
 			</div>
 		</div>
+	</div>
+
+	
+
+	<div ng-if="vm.filters.priceRange.length > 0">
+		<hr>
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showPriceFilters = !vm.showPriceFilters;" data-toggle="collapse" data-target="#priceDiv"><i ng-class="!vm.showPriceFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Price Range</b><!-- <i class="fa fa-globe"></i> --></div>
+			<div id="priceDiv" class="collapse">
+				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.priceRange">
+				    <input ng-model='filter.checked' type='checkbox'>
+				    <label for="priceRangeCheckBoxes">
+		            	<a class= "link-text-color" href="" ng-click="filter.checked = !filter.checked">{{filter.name}}</a>
+		        	</label>
+				</div>
+			</div>
 	</div>
 
 	<hr>
